Signed-off-by: resturentalmobilsemarang <resturentalsemarang@gmail.com>

--- a/wp-content/uploads/so-css/so-css-madxflow.css
+++ b/wp-content/uploads/so-css/so-css-madxflow.css
@@ -7,7 +7,7 @@ body {
 }
 
 .madxartwork-button-link.madxartwork-button.madxartwork-size-sm {
-  background-color: #3E2D25;
+  background-color: #A90037;
   box-shadow: 0 0 5px #111111;
 }
 a{color:#3E2D25}
